--- a/css/welcome_style.css
+++ b/css/welcome_style.css
@@ -5,23 +5,14 @@
 float:right;
 }
 #logo{
+  margin-left: 40%;
+}
+header{
 
 }
-ul {
-  position: fixed;
-  border-radius: 25px;
-  height:20px;
-  width:1215px;
-  background-color: grey;
-  padding: 20px;
-    top: 0;
-    list-style-type: none;
-    margin: 0;
-    overflow: hidden;
-}
-li a {
-    display: block;
-    color: white;
+header a {
+    display:inline;
+    color: grey;
     text-align: center;
     padding: 0px 16px;
     text-decoration: none;
@@ -31,7 +22,7 @@ li a {
 }
 
 a:hover:not(.active) {
-    background-color: #111;
+    background-color: hotpink;
     transition-duration: 2s;
 
 }
