--- a/css/welcome_style.css
+++ b/css/welcome_style.css
@@ -14,6 +14,14 @@ body{
     font-family:bubbly;
 
 }
+#sidebar{
+  margin-left: 0;
+  width: 20%;
+  height:100%;
+  float: left;
+  background-color: white;
+  border: solid black;
+}
 #navbar{
  margin-top: -0.5%;
  border: 1px solid grey;
