major update Beta #2

--- a/css/welcome_style.css
+++ b/css/welcome_style.css
@@ -23,7 +23,7 @@ float:right;
   height: 40px;
 }
 body{
-  background-image: url("../images/pro.png");
+  background-image: url("../images/pro1.png");
 
     background-color:#131631;
     background-attachment: fixed;
