Fixed Error Messages
To Err is Human

Fix Error Messages in Login and Registration Form

--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,8 @@ footer p{
 
 body{
   opacity: 0.9;
-//  background-image: url("../images/bg.jpg");
-  background: linear-gradient(0deg, #EB3349 10%, #F45C43 90%);
+  background-image: url("../images/bg.jpg");
+  //background: linear-gradient(0deg, #EB3349 10%, #F45C43 90%);
   background-attachment: fixed;
   height:840px;
   font-family:bubbly;
