--- a/css/welcome_style.css
+++ b/css/welcome_style.css
@@ -9,7 +9,7 @@
 float:right;
 }
 #logo{
-  margin-left: 25%;
+  margin-left: 39%;
   display: inline;
 }
 #msg{
@@ -48,10 +48,17 @@ font-weight: bold;
 #sidebar{
   margin-left: 0;
   width: 20%;
-  height:100%;
+  height:50%;
   float: left;
   background-color:#00ccff;
   border: solid black;
+}
+#sidebar ul{
+  list-style-type: none;
+}
+#sidebar ul a.active {
+    color: yellow;
+    border-bottom-width:0px;
 }
 #navbar{
  margin-top: -0.5%;
